weapon post api added
