# controller/weapon.js
@@ -6,6 +6,23 @@ const getAll = async (req, res) => {
     res.status(200).json(weapon)
 }
 
+// create one
+const addOne = async (req, res) => {
+    // eslint-disable-next-line new-cap
+    const weapon = new schema({
+        weaponType: req.body.weaponType,
+        name: req.body.name,
+        atkLVL90: req.body.atkLVL90,
+        rarity: req.body.rarity,
+        bonusStatLVL90: req.body.bonusStatLVL90
+
+    })
+
+    const createdWeapon = await weapon.save()
+
+    res.status(201).json(createdWeapon._id)
+}
+
 // update
 const updateOne = async (req, res) => {
 
@@ -16,4 +33,4 @@ const updateOne = async (req, res) => {
 
 }
 
-module.exports = { getAll, updateOne }
+module.exports = { getAll, addOne, updateOne }
