# routes/weapon.js
@@ -14,6 +14,22 @@ router.get('/',
        } */
     weaponController.getAll)
 
+// add one
+router.post('/', tryCatch(
+    // #swagger.tags = ['Weapon']
+    // #swagger.description = 'Create a new weapon document in the collection.'
+    /* #swagger.parameters['weapon'] = {
+                 in: 'body',
+                 description: 'Information of a weapon to be created. All fields are required.',
+                 required: true,
+                 schema: { $ref: "#/definitions/Weapon document creation" }
+          } */
+    /* #swagger.responses[201] = { 
+             description: 'Returns weapon "_id" autogenerated by mongodb',
+             schema: "63dd79bed4238c841b2794ee"
+    } */
+    weaponController.addOne))
+
 // update one
 router.put('/:id', tryCatch(
     // #swagger.tags = ['Weapon']
