# swagger.json
@@ -163,6 +163,35 @@
             }
           }
         }
+      },
+      "post": {
+        "tags": [
+          "Weapon"
+        ],
+        "description": "Create a new weapon document in the collection.",
+        "parameters": [
+          {
+            "name": "weapon",
+            "in": "body",
+            "description": "Information of a weapon to be created. All fields are required.",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Weapon document creation"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Returns weapon \"_id\" autogenerated by mongodb",
+            "schema": {
+              "type": "string",
+              "example": "63dd79bed4238c841b2794ee",
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        }
       }
     },
     "/weapon/{id}": {
@@ -380,7 +409,7 @@
           "type": "string",
           "example": "the catch"
         },
-        "atk(lvl90)": {
+        "atkLVL90": {
           "type": "string",
           "example": "510"
         },
@@ -388,7 +417,7 @@
           "type": "string",
           "example": "5star"
         },
-        "bonustStat(lvl90)": {
+        "bonusStatLVL90": {
           "type": "string",
           "example": "energy recharge 45.9%"
         },
@@ -409,7 +438,7 @@
           "type": "string",
           "example": "the catch"
         },
-        "atk(lvl90)": {
+        "atkLVL90": {
           "type": "string",
           "example": "510"
         },
@@ -417,7 +446,7 @@
           "type": "string",
           "example": "5star"
         },
-        "bonustStat(lvl90)": {
+        "bonusStatLVL90": {
           "type": "string",
           "example": "energy recharge 45.9%"
         }
@@ -448,7 +477,7 @@
             "type": "string",
             "example": "5star"
           },
-          "bonustStatLVL90": {
+          "bonusStatLVL90": {
             "type": "string",
             "example": "energy recharge 45.9%"
           },
